
syntax = "proto3";

package mesop.components.checkbox;

message CheckboxType {
  bool value = 1;
  string on_mat_checkbox_change_handler_id = 2;
  string label = 3;
}
